# airflow-dag-examples

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements-local.txt
config/: aws.json  slack.json
dags/aws/: README.md  docker-compose.localstack.yaml  example_sns_operator.py  init_localstack.sh
dags/aws/operator/: README.md  ecs_operator_example.py  example_ecs_operator.py  sns_operator_example.py
dags/aws/operators/: README.md  example_ecs_operator.py  example_sns_operator.py
dags/build_tasks/: README.md  main.py
dags/build_tasks/sub/: sw1.py  sw2.py  sw3.py
dags/data_aware_scheduling/: README.md  example_dataset.py  example_dataset_with_and_condition.py  example_dataset_with_or_condition.py  example_producer_consumer.py
dags/dynamic_task_mapping/: README.md  example_dtm_non_taskflow_api.py
dags/external_task_sensor/: example_external_task_sensor.py
dags/libs/: slack.py
dags/sla/: README.md  example_sla_miss_slack_notification.py
dags/task_groups/: README.md  example_task_group1.py  example_task_group_nest.py
dags/taskflow/: example_taskflow.py
dags/taskflow_api/: example_taskflow.py
dags/timetable/: example_cron_trigger_timetable.py
scripts/: init-local.sh
