[project]
name = "airflow-dag-examples"
version = "0.1.0"
description = "Airflow dag examples"
authors = [
    { name = "matsuda", email = "daaamatsun@gmail.com" }
]
dependencies = [
    "apache-airflow>=2.10.3",
    "apache-airflow-providers-google==10.25.0",
    "apache-airflow-providers-amazon==8.19.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "Q"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
lint = [
    "ruff>=0.11.6",
]
